--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 {
+  "name": "dojo-presence",
+  "version": "1.0.0",
+  "description": "Attendance mark system.",
+  "main": "index.js",
   "scripts": {
-    "build":"npx @tailwindcss/cli -i ./src/styles.css -o ./src/output.css --watch"
+    "build": "npx tailwindcss -i ./src/styles.css -o ./src/output.css --watch"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@tailwindcss/cli": "^4.1.3",
-    "tailwindcss": "^4.1.3"
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17"
   }
 }
